tests/k8s_testcases/network-policy-checks-bad-path/peer_namespaceselector_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: peer-namespaceselector-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
  egress:
    - to:
        #[] array instead of dict
        - namespaceSelector: []
